--- a/login.html
+++ b/login.html
@@ -8,22 +8,26 @@
 </head>
 <body>
     <header>
-        <h1>
-            Taskify!
-        </h1>
-        <nav>
-            <ul>
-                <li id ="Home">
-                    <a href="index.html">Home</a>
-                </li>
-                <li id ="Login" class="current">
-                    <a href="login.html">Login</a>
-                </li>
-                <li id ="Register">
-                    <a href="register.php">Register</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div id="brand">
+                <h1>
+                    Taskify!
+                </h1>
+            </div>
+            <nav>
+                <ul>
+                    <li id ="Home">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li id ="Login" class="current">
+                        <a href="login.html">Login</a>
+                    </li>
+                    <li id ="Register">
+                        <a href="register.php">Register</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div>
         <form>
