--- a/register.html
+++ b/register.html
@@ -8,20 +8,24 @@
 </head>
 <body>
     <header>
-        <h1>
-            Taskify!
-        </h1>
-        <ul>
-            <li id ="Home">
-                <a href="index.html">Home</a>
-            </li>
-            <li id ="Login">
-                <a href="login.html">Login</a>
-            </li>
-            <li id ="Register" class="current">
-                <a href="register.html">Register</a>
-            </li>
-        </ul>
+        <div class="container">
+            <div id="brand">
+                <h1>
+                    Taskify!
+                </h1>
+            </div>
+            <ul>
+                <li id ="Home">
+                    <a href="index.html">Home</a>
+                </li>
+                <li id ="Login">
+                    <a href="login.html">Login</a>
+                </li>
+                <li id ="Register" class="current">
+                    <a href="register.html">Register</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <div>
         <form>
